Jul 27 2006  devel  Merged patch from Rob Deker to handle QoS to some extent
May 20 2006  devel  Merged gpsmap patch from rr to add european expedia maps
Apr 25 2006  devel  Merged OpenBSD patches from Matthias Kilian:
                     Detect stdc++ OpenBSD properly
                     Fix possible overflow in expat handling
                     Handle OpenBSD APM info
                     Fix return values in packet source
                    Merged various patches from Enrico:
                     c++-ism casting in expat parsers
                     Honor return values in several cases from syscalls
                     Move compiler attributes
                     Fix my stupidity in string handlers in some places
                     Fix buffers to be more efficient
                     Fix an initialization in macaddr structs
Apr 12 2006  devel  Added --retain-monitor cmdline option on request
Mar 31 2006  devel  Added setting madwifi-ng to radiotap mode
                    Fixed several crashes due to not checking noise/junk
                     packet params
Mar 30 2006  devel  Added zd1211 capture source (with warnings)
                    Fixed madwifi-ng fcs bytes
                    Fixed madwifi-ng not shutting down rfmon vap
Mar 29 2006  devel  Fixed madwifi_ag with madwifi-ng drivers
Mar 28 2006  devel  Moved ipw3945parasite to ipwlivetap
                    Moved madwifing support into madwifi standard as an
                     auto-detect
                    Lots of little tweaks to handle moving sources
Mar 19 2006  devel  Added the initial ipw3945 support.  You'll need a current
                     (read: latest) ipw3945 driver.  If it doesn't work,
                     let me know.  There are no doc entries for this until
                     I get it officially tested.
Mar 15 2006  devel  Switched ACX100 capture to not expect the FCS bytes.
                    Remember, kismet devel is happening in the newcore